# crm-automator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
eml/: __init__.py  crm_client.py  debug_attachment_url.py  eml_automator.py  intelligence.py  persistence.py
eml/docs/: README.md  USER_GUIDE.md  agent_demo.py  agent_sync_example.md  technical_specification.md
