[project]
name = "crm-automator"
version = "1.4.0"
description = "AI-powered email processing and CRM automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "instructor",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "email-reply-parser",
    "markdownify",
    "duckduckgo-search",
    "crawl4ai>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
eml-automator = "eml.eml_automator:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eml"]
